docs(README): 更新开源许可证构建和展示指南
- 添加 shelljs 依赖安装说明
- 更新 OSSLicensesBuilder.js 等文件获取方式
- 新增 GitHub Actions 工作流配置步骤
- 增加在微信小程序中使用和展示开源许可信息的示例
- 补充感谢开源项目列表

--- a/source-code/update-oss-licenses-dist.yml
+++ b/source-code/update-oss-licenses-dist.yml
@@ -19,7 +19,7 @@ jobs:
   update-oss-licenses-dist:
     strategy:
       matrix:
-        os: [ windows-latest ] # 请根据您的微信小程序开发环境配置相应系统（如 `macos-latest`、`ubuntu-latest` 等），因为部分 npm 包在不同系统环境下分发的包名不一致
+        os: [ windows-latest ] # 请根据您的微信小程序开发环境配置相应运行环境（如 `macos-latest`、`ubuntu-latest` 等），因为部分 npm 包在不同系统环境下分发的包不一致
     runs-on: ${{ matrix.os }}
     permissions:
       contents: write
