--- a/source-code/update-oss-licenses-dist.yml
+++ b/source-code/update-oss-licenses-dist.yml
@@ -1,3 +1,5 @@
+# SPDX-License-Identifier: MulanPSL-2.0
+
 #    Copyright (c) 2025 ArcticFoxPro
 #    WeChat MiniProgram OSS Licenses Semi-Auto Gen is licensed under Mulan PSL v2.
 #    You can use this software according to the terms and conditions of the Mulan PSL v2.
